make vs code stop complaining about java warnings